# -Lingstack

./: .gitignore  README.md  bootstrap_r3.cjs  bootstrap_r3_2.cjs  bootstrap_r3_3.cjs  bootstrap_r3_4.cjs  bootstrap_r3_fix.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: MODEL_DISTILLATION_ROADMAP.md  TRAINING_DATA_SCHEMA.md  native-desktop-capability-checklist.md  r4-ai-chain-and-workspace-enhancement-report.md  r4-settings-provider-configuration-report.md  workspace-multi-tab-migration-report.md  灵栈-LingStack-CodexWorkbench-功能回接热修复报告.md  灵栈-LingStack-Codex风格工作台开发总文档.md  灵栈-LingStack-HotfixR2-and-R47.1-真机修复与实机验收报告.md  灵栈-LingStack-Phase1-CodexWorkbench壳层重构报告.md  灵栈-LingStack-Phase10-自举开发闭环与正式Beta迭代制度报告.md  灵栈-LingStack-Phase11-真实项目接管与首个自修复闭环报告.md  灵栈-LingStack-Phase12-持续自举迭代与Beta发布节奏自动化报告.md  灵栈-LingStack-Phase13-多机内测运营面板与反馈分流质量评分报告.md  灵栈-LingStack-Phase14-真实云侧同步与内测用户管理发布策略分级报告.md  灵栈-LingStack-Phase2-核心Stores重构报告.md  灵栈-LingStack-Phase3-Thread主链落地报告.md  灵栈-LingStack-Phase4-ReviewPane与Diff主链落地报告.md  灵栈-LingStack-Phase5-Terminal与Git主链闭环报告.md  灵栈-LingStack-Phase6-Skills_MCP_Browser_ComputerUse入口整合报告.md  灵栈-LingStack-Phase7-AgentOrchestration_GoalMode_Automations纵深整合报告.md  灵栈-LingStack-Phase9-真实内测回路与自举开发迁移计划报告.md  (+10 more)
release/: deploy.ps1  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: Chinese.nsh  installer.nsh  installer.nsi
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  fs.rs  mod.rs  window.rs
src-tauri/src/state/: mod.rs
(+294 files in other folders)
