[package]
name = "lingstack"
version = "0.2.9"
description = "灵栈 LingStack - 桌面本地 AI Agent 工作台"
authors = ["LingStack"]
edition = "2021"

[lib]
name = "lingstack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
